# hyperfold-game-library

./: .gitignore  .gitmodules  Cargo.toml  README.md
res/piskel/: fruit.piskel  snake.piskel  snake_body.piskel  snake_body_death.piskel  snake_death.piskel
snake/: Cargo.toml
snake/src/: elevations.rs  fruit.rs  fruit_effect.rs  lib.rs  snake.rs  snake_body.rs  snake_death.rs
src/: init.rs  main.rs
